# Projet-Machine-learning

OneDrive/Documents/All_projet/Projet/final/: .coverage  BASE_DE_DONNEES.txt  LIENS_EXEMPLE.txt  README.md  modele.json  pyproject.toml
OneDrive/Documents/All_projet/Projet/final/final/: __main__.py  application.py  entrainement_du_modele.py  nouveau_modele.py  parcours_url.py  traitement_base_de_donnees.py
OneDrive/Documents/All_projet/Projet/final/tests/: test_application.py  test_parcours_url.py  test_traitement_base_de_donnees.py
