[tool.poetry]
name = "final"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
pandas-stubs = "^2.1.4.231227"
pytest = "^7.4.4"
selenium = "^4.16.0"
logging = "^0.4.9.6"
scikit-learn = "^1.3.2"
tk = "^0.1.0"
typer = "^0.9.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
types-seaborn = "^0.13.1.20240115"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
mypy = "^1.8.0"
pytest-selenium = "^4.0.2"
pytest-cov = "^4.1.0"
ruff = "^0.1.11"
pytest-rerunfailures = "^13.0"

[tool.pytest.ini_options]
markers = "selenium: mark tests that require selenium"
addopts = "-p no:warnings --driver=chrome --reruns 3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
